# searchable-files-demo

./: .flake8  .gitignore  .pre-commit-config.yaml  COPYING  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yaml
data/: annotate.yaml  extraction.yaml  visibility.yaml
data/config/: assembler.yaml  extractor.yaml
data/files/dir2/: simple_script.sh
data/files/gutenberg/: README
data/files/gutenberg/fiction/: cyrano_de_bergerac.txt  frankenstein.txt
data/files/gutenberg/nonfiction/: the_souls_of_black_folk.txt
src/searchable_files/: __init__.py  _common.py  _login_and_logout.py  _manage_index.py  assembler.py  extractor.py  main.py  manage_index.py  query.py  submitter.py  watcher.py
src/searchable_files/lib/: __init__.py  auth.py  clients.py  search.py
