[build-system]
requires = ["flit-core"]
build-backend = "flit_core.buildapi"

[project]
name = "searchable-files"
description = "A demo application for making a filesystem searchable via Globus Search"
version = "0.1.0"
requires-python = ">=3.9"
license = { text = "Apache 2.0" }
keywords = []
authors = [
  { name = "Stephen Rosen", email = "sirosen@globus.org" },
]
dependencies = [
    "click<8",
    "globus-sdk>=3,<4",
    "ruamel.yaml==0.17.4",
    "identify<2.0",
]

[project.scripts]
searchable-files = "searchable_files:cli"

[project.urls]
source = "https://github.com/globus/searchable-files-demo"

[tool.isort]
profile = "black"
